xterm (306-1) UNRELEASED; urgency=medium

  [ Julien Cristau ]
  * New upstream release.
  * Remove Cyril from Uploaders.

  [ Sven Joachim ]
  * New upstream release.

 -- Julien Cristau <jcristau@debian.org>  Tue, 03 Jun 2014 09:27:48 +0200

xterm (304-1) unstable; urgency=low

  * New upstream release.

 -- Sven Joachim <svenjoac@gmx.de>  Wed, 07 May 2014 16:50:50 +0200

xterm (303-1) unstable; urgency=low

  * New upstream release.
    - Fix a regression in xterm 302 relating to interaction of SHELL
      and XTERM_SHELL variables (Closes: #740919).

 -- Sven Joachim <svenjoac@gmx.de>  Fri, 07 Mar 2014 18:23:50 +0100

xterm (302-1) unstable; urgency=low

  * New upstream release.
  * Update copy of XTerm FAQ to revision 1.278 (dated 2014/02/24)
    (Closes: #737692).
  * Check GPG signature of upstream tarballs in the watch file.

 -- Sven Joachim <svenjoac@gmx.de>  Tue, 04 Mar 2014 19:55:16 +0100

xterm (301-1) unstable; urgency=low

  * New upstream release.
    - Improve manpage description of scrollbar translations versus
      the vt100 translations (Closes: #723573).
  * Build-depend on autotools-dev to update config.{guess,sub}.
  * Bump Standards-Version to 3.9.5, no changes needed.

 -- Sven Joachim <svenjoac@gmx.de>  Wed, 22 Jan 2014 18:22:12 +0100

xterm (300-1) unstable; urgency=low

  * New upstream release.
    - Avoid infinite recursion and stack overflow in libxcursor
      (Closes: #731269).

 -- Sven Joachim <svenjoac@gmx.de>  Wed, 04 Dec 2013 18:05:01 +0100

xterm (299-1) unstable; urgency=low

  * New upstream release.
  * Add libxcursor-dev to Build-Depends (Closes: #466704).

 -- Sven Joachim <svenjoac@gmx.de>  Mon, 02 Dec 2013 18:58:17 +0100

xterm (298-1) unstable; urgency=low

  * New upstream release.
    - Change default for assumeAllChars resource (Closes: #725682).
    - Amend change from xterm 297 for ASCII-equivalents to ensure that
      missing characters which happen to be double-width are padded to